implement server pull updates info api, close #320
